# zephyr-course

./: .gitignore
app/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
app/boards/our_board/: Kconfig.defconfig  Kconfig.our_board  board.c  board.cmake  board.yml  our_board_common.dtsi  our_board_cpuapp.dts  our_board_cpuapp.yaml  our_board_cpuapp_common-pinctrl.dtsi  our_board_cpuapp_common.dtsi  our_board_cpuapp_defconfig  our_board_cpuapp_ns.dts  our_board_cpuapp_ns.yaml  our_board_cpuapp_ns_defconfig  our_board_cpunet-pinctrl.dtsi  our_board_cpunet.dts  our_board_cpunet.yaml  our_board_cpunet_defconfig
app/boards/our_scratch_board/: Kconfig.defconfig  Kconfig.our_scratch_board  board.cmake  board.yml  our_scratch_board-pinctrl.dtsi  our_scratch_board.dts  our_scratch_board.yaml  our_scratch_board_defconfig
app/drivers/our_driver/: our_driver.c  our_driver.h  our_driver_shell.c
app/drivers/our_driver/dts/bindings/: our_driver.yaml
app/drivers/our_driver/zephyr/: CMakeLists.txt  Kconfig  module.yml
app/src/: main.cpp
archived_twister-out/coverage/: index.css  index.functions.html  index.html  index.ring_buf.c.8c3cea90f03862a83cd633b698d92c2f.html
tests/calculator/: testcase.yaml
tests/calculator/src/: test_basic.c
tests/ring_buf/: HOMEWORK.md  testcase.yaml
tests/ring_buf/src/: test_ring_buf.c
